# Local-Autopilot

./: .gitignore  BOOTSTRAP.md  CODE_OF_CONDUCT.md  LICENSE  README.md  config.yaml  install.sh  pyproject.toml  requirements.txt
daemons/: autopilot-prune.plist.template  autopilot-rerank.plist.template  autopilot-tick.plist.template  autopilot-tick.service.template  autopilot-tick.timer.template
docs/: agent-dispatch-protocol.md  epistemic-stack.md  gap-analysis-2026-05-14.md  gap-analysis-local-llm-2026-05-14.md  headless-executor-e2e-2026-05-14.md  known-issues.md  superpowers-in-headless-mode-2026-05-14.md
local_autopilot/: __init__.py
local_autopilot/memory/: __init__.py  llm_priority_queue.py
local_autopilot/tools/: __init__.py  agent_dispatch.py  archloop_runner.py  autopilot_cli.py  autopilot_hook.py  autopilot_state.py  caffeinate.py  deep_exploration.py  fleet_escalate.py  headless_executor.py  synaptic_client.py
scripts/: 3s-brainstorm.sh  install-daemon-linux.sh  install-daemon-macos.sh  invariance_audit.sh  preflight.sh  prune-old-cycles.sh  rerank_complexity_vectors.py  uninstall-daemon-linux.sh  uninstall-daemon-macos.sh  uninstall.sh
seeds/: complexity_vectors.sql
tests/: test_archloop.py  test_autopilot_state.py  test_deep_exploration.py  test_fleet_escalate.py  test_headless_executor.py
tests/invariance/: CONTRACT.md  _mock_autopilot_state.py  conftest.py  test_invariant_concurrent_safe.py  test_invariant_crash_recovery.py  test_invariant_live_data.py  test_invariant_observability.py  test_invariant_resource_caps.py  (+2 more)
